--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
         <fastDFS.client.version>1.26.1-RELEASE</fastDFS.client.version>
         <lombok.version>1.18.2</lombok.version>
         <common.lang3.version>3.9</common.lang3.version>
+        <common.io.version>2.6</common.io.version>
+        <jackson.version>2.10.0</jackson.version>
         <foodie.version>0.0.1-SNAPSHOT</foodie.version>
     </properties>
 
