--- a/foodie-dev-pojo/pom.xml
+++ b/foodie-dev-pojo/pom.xml
@@ -17,5 +17,21 @@
             <artifactId>foodie-dev-common</artifactId>
             <version>${foodie.version}</version>
         </dependency>
+        <!-- swagger2配置 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>${swagger.bootstrap.version}</version>
+        </dependency>
     </dependencies>
 </project>
