--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <common.io.version>2.6</common.io.version>
         <jackson.version>2.10.0</jackson.version>
         <foodie.version>0.0.1-SNAPSHOT</foodie.version>
+        <swagger.version>2.9.2</swagger.version>
+        <swagger.bootstrap.version>1.9.6</swagger.bootstrap.version>
     </properties>
 
    <!-- <dependencies>
