--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <foodie.version>0.0.1-SNAPSHOT</foodie.version>
         <swagger.version>2.9.2</swagger.version>
         <swagger.bootstrap.version>1.9.6</swagger.bootstrap.version>
+        <gson.version>2.8.6</gson.version>
     </properties>
 
    <!-- <dependencies>
